# gtk

./: CMakeLists.txt
client/: CMakeLists.txt  coin_drawing_area.cpp  coin_drawing_area.h  main.cpp  window.cpp  window.h
server/: CMakeLists.txt  main.cpp  server.cpp  server.h
